@@ -110,15 +110,13 @@ Templating<ref>Text<!--comment--></ref>
 !! result
 <p><sup id="cite_ref-0" class="reference"><a href="#cite_note-0">[1]</a></sup>
 </p>
-<table class="gallery" cellspacing="0" cellpadding="0">
-	<tr>
-		<td><div class="gallerybox" style="width: 155px;">
+<ul class="gallery">
+		<li class="gallerybox" style="width: 155px"><div style="width: 155px">
 			<div class="thumb" style="padding: 66px 0; width: 150px;"><div style="margin-left: auto; margin-right: auto; width: 120px;"><a href="/wiki/File:Foobar.jpg" class="image"><img alt="Foobar.jpg" src="http://example.com/images/3/3a/Foobar.jpg" width="120" height="14" /></a></div></div>
 			<div class="gallerytext">
 			</div>
-		</div></td>
-	</tr>
-</table>
+		</div></li>
+</ul>
 <ol class="references"><li id="cite_note-0"><a href="#cite_ref-0">↑</a> one</li></ol>
 
 !! end
